--- a/src/components/common/header/Header.scss
+++ b/src/components/common/header/Header.scss
@@ -2,7 +2,7 @@
 
 .header {
     box-shadow: 0 8px 5px -5px rgba(0, 0, 0, 0.45);
-    min-height: 15vh;
+    min-height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
